<resources>
    <string name="app_name">FragmentDataExt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track_text">Track</string>
    <string name="goal_text">Goal</string>
    <string name="submit">Submit</string>
    <string name="name_text">Name</string>
    <string name="screen_logo">screenLogo</string>
</resources>