<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FirstFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/image1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/screen_logo" />

    <EditText
        android:id="@+id/inputT1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_text"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:autofillHints="false"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/inputT2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/track_text"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/inputT1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp"
        android:autofillHints="false"
        android:inputType="textShortMessage" />

    <EditText
        android:id="@+id/inputT3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/goal_text"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/inputT2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/inputT3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>